--- a/index.html
+++ b/index.html
@@ -37,6 +37,48 @@
 				</div>
 			</div>
 		</section>
+		<section class="block1">
+			<div class="container">
+				<div class="block1__inner">
+					<div class="block1__item">
+						<img class="block1__img" src="images/nimage1.png" alt="img">
+						<h6 class="block1__h6">PHOTOGRAPHY</h6>
+						<p class="block1__p">Helmut Lang celebrates taxi drivers worldwide in latest campaign</p>
+						<h5 class="block1__h5">BY ALESSANDRA ORTIZ</h5>
+					</div>
+					<div class="block1__item">
+						<img class="block1__img" src="images/nimage2.png" alt="img">
+						<h6 class="block1__h6">PHOTOGRAPHY</h6>
+						<p class="block1__p">Bowlcut launch a new summer collection that pays homage to “UK legends”</p>
+						<h5 class="block1__h5">BY ROSANNA ONDRICKA</h5>
+					</div>
+					<div class="block1__item">
+						<img class="block1__img" src="images/nimage3.png" alt="img">
+						<h6 class="block1__h6">PHOTOGRAPHY</h6>
+						<p class="block1__p">Thousands of previously unseen photographs by Andy Warhol will be made public this Autumn</p>
+						<h5 class="block1__h5">BY ANNIE LUEILWITZ</h5>
+					</div>
+					<div class="block1__item">
+						<img class="block1__img" src="images/nimage4.png" alt="img">
+						<h6 class="block1__h6">INTERACTIVE DESIGN</h6>
+						<p class="block1__p">London-based Yinka Ilori’s storytelling furniture</p>
+						<h5 class="block1__h5">BY ANNIE LUEILWITZ</h5>
+					</div>
+					<div class="block1__item">
+						<img class="block1__img" src="images/nimage5.png" alt="img">
+						<h6 class="block1__h6">GRAPHIC DESIGN</h6>
+						<p class="block1__p">Anonymous Israeli art collective Broken Fingaz direct music video for U2 and Beck</p>
+						<h5 class="block1__h5">BY SIMEON BREKKE</h5>
+					</div>
+					<div class="block1__item">
+						<img class="block1__img" src="images/nimage6.png" alt="img">
+						<h6 class="block1__h6">ARCHITECTURE</h6>
+						<p class="block1__p">Suzanne Saroff’s meticulously arranged photographs alter perceptions</p>
+						<h5 class="block1__h5">BY RETA TORPHY</h5>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
