--- a/index.html
+++ b/index.html
@@ -79,6 +79,66 @@
 				</div>
 			</div>
 		</section>
+		<section class="block2">
+			<div class="container">
+				<div class="block2__inner">
+					<h4 class="block2__h4">Latest Posts</h4>
+					<ul class="block2__ul">
+						<li class="block2__item">
+							<img class="block2__img" src="images/japan.png" alt="img">
+							<h6 class="block2__h6">ILLUSTRATION</h6>
+							<p class="block2__p">Japan House opens in mountainside to foster peak creativity.</p>
+							<h5 class="block2__h5">By Reta Torphy</h5>
+						</li>
+						<li class="block2__item">
+							<img class="block2__img" src="images/nimage1.png" alt="img">
+							<h6 class="block2__h6">PHOTOGRAPHY</h6>
+							<p class="block2__p">Helmut Lang celebrates taxi drivers worldwide in latest campaign</p>
+							<h5 class="block2__h5">BY ALESSANDRA ORTIZ</h5>
+						</li>
+						<li class="block2__item">
+							<img class="block2__img" src="images/nimage2.png" alt="img">
+							<h6 class="block2__h6">PHOTOGRAPHY</h6>
+							<p class="block2__p">Bowlcut launch a new summer collection that pays homage to “UK legends”</p>
+							<h5 class="block2__h5">BY ROSANNA ONDRICKA</h5>
+						</li>
+						<li class="block2__item">
+							<img class="block2__img" src="images/nimage3.png" alt="img">
+							<h6 class="block2__h6">PHOTOGRAPHY</h6>
+							<p class="block2__p">Thousands of previously unseen photographs by Andy Warhol will be made public this Autumn</p>
+							<h5 class="block2__h5">BY ANNIE LUEILWITZ</h5>
+						</li>
+						<li class="block2__item">
+							<img class="block2__img" src="images/nimage4.png" alt="img">
+							<h6 class="block2__h6">INTERACTIVE DESIGN</h6>
+							<p class="block2__p">London-based Yinka Ilori’s storytelling furniture</p>
+							<h5 class="block2__h5">BY ANNIE LUEILWITZ</h5>
+						</li>
+						<li class="block2__item">
+							<img class="block2__img" src="images/nimage5.png" alt="img">
+							<h6 class="block2__h6">GRAPHIC DESIGN</h6>
+							<p class="block2__p">Anonymous Israeli art collective Broken Fingaz direct music video for U2 and Beck</p>
+							<h5 class="block2__h5">BY SIMEON BREKKE</h5>
+						</li>
+						<li class="block2__item">
+							<img class="block2__img" src="images/nimage6.png" alt="img">
+							<h6 class="block2__h6">ARCHITECTURE</h6>
+							<p class="block2__p">Suzanne Saroff’s meticulously arranged photographs alter perceptions</p>
+							<h5 class="block2__h5">BY RETA TORPHY</h5>
+						</li>
+						<li class="block2__item">
+							<img class="block2__img" src="images/nimage7.png" alt="img">
+							<h6 class="block2__h6">Graphic Design</h6>
+							<p class="block2__p">Anu Ambasna’s playful illustrations celebrate club culture, brown bodies and perfect paunches</p>
+							<h5 class="block2__h5">BY Leo Bartell</h5>
+						</li>
+					</ul>
+					<form action="" class="block2__form">
+						<button class="block2__button">View All Latest Posts</button>
+					</form>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
 </html>
