--- a/index.html
+++ b/index.html
@@ -139,6 +139,94 @@
 				</div>
 			</div>
 		</section>
+		<section class="block3">
+			<div class="container">
+				<div class="block3__inner">
+					<h4 class="block3__h4">featured POSTS</h4>
+					<ul class="block3__ul">
+						<li class="block3__li">
+							<img class="block3__img" src="images/nimage2-1.png" alt="img">
+							<h6 class="block3__h6">Graphic Design</h6>
+							<p class="block3__p">A Brief History of the FIFA World Cup Logo</p>
+							<h5 class="block3__h5">By Clem Onojeghuo</h5>
+						</li>
+						<li class="block3__li">
+							<img class="block3__img" src="images/nimage2-2.png" alt="img">
+							<h6 class="block3__h6">Graphic Design</h6>
+							<p class="block3__p">Need a guide to LA’s graphic design scene? Shoplifters’ new issue has got your back</p>
+							<h5 class="block3__h5">By Alessandra Ortiz</h5>
+						</li>
+						<li class="block3__li">
+							<img class="block3__img" src="images/nimage2-3.png" alt="img">
+							<h6 class="block3__h6">Photography</h6>
+							<p class="block3__p">Fred Rowson directs film for Years and Years</p>
+							<h5 class="block3__h5">By Coby Gottlieb</h5>
+						</li>
+						<li class="block3__li">
+							<img class="block3__img" src="images/nimage2-4.png" alt="img">
+							<h6 class="block3__h6">ILLUSTRATION</h6>
+							<p class="block3__p">M&C Saatchi and Fontsmith collaborate on font collection for House of St Barnabas</p>
+							<h5 class="block3__h5">By Annie Lueilwitz</h5>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</section>
 	</main>
+	<footer class="footer">
+		<div class="container">
+			<div class="footer__inner">
+				<h3 class="footer__h3"><img class="footer__img" src="images/nlogowhite.svg" alt="logo"><span class="footer__span">© 2018 Noiceland™, all rights reserved</span></h3>
+				<div class="footer__mid">
+					<div class="footer__left">
+					<h4 class="footer__h4">Categories</h4>
+					<ul class="footer__ul1">
+						<li class="footer__li1">
+							<a class="footer__a">Animation</a>
+							<a class="footer__a">Interactive Design</a>
+						</li>
+						<li class="footer__li1">
+							<a class="footer__a">Architecture</a>
+							<a class="footer__a">Miscellaneous</a>
+						</li>
+						<li class="footer__li1">
+							<a class="footer__a">Graphic Design</a>
+							<a class="footer__a">Photography</a>
+						</li>
+						<li class="footer__li1">
+							<a class="footer__a">Illustration</a>
+							<a class="footer__a">Product Design</a>
+						</li>
+					</ul>
+				</div>
+					<form action="" class="footer__form">
+						<label class="footer__label" for="email">Subscribe to newsletter</label>
+						<div class="footer__formd">
+						<input class="footer__input" type="email" id="email" placeholder="EMAIL ADDRESS">
+						<button class="footer__btn">SEND</button></div>
+					</form>
+				</div>
+				<div class="footer__last">
+					<ul class="footer__ul2">
+						<li class="footer__li2"><h6 class="footer__h6">Information</h6></li>
+						<li class="footer__li2"><a href="" class="footer__a1">about</a></li>
+						<li class="footer__li2"><a href="" class="footer__a1">contact</a></li>
+						<li class="footer__li2"><a href="" class="footer__a1">terms</a></li>
+					</ul>
+					<ul class="footer__ul2">
+						<li class="footer__li2"><h6 class="footer__h6">follow us</h6></li>
+						<li class="footer__li2"><a href="" class="footer__a1">instagram</a></li>
+						<li class="footer__li2"><a href="" class="footer__a1">facebook</a></li>
+						<li class="footer__li2"><a href="" class="footer__a1">twitter</a></li>
+					</ul>
+					<ul class="footer__ul2">
+						<li class="footer__li2"><h6 class="footer__h6">template</h6></li>
+						<li class="footer__li2"><a href="" class="footer__a1">Image License Info</a></li>
+						<li class="footer__li2"><a href="" class="footer__a1">Powered by Webflow</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
